Details
Description
0.4.8-RC-18-g64dcc95 gcc dbg
Install Miranda 0.10.21 from rapps.
Open the main app with the window where the contact list is usually displayed in.
Try to drag that Window to the right border of the monitor.
Expected behavior
xpsp3_ok.webm
-The window does snap to the border of the monitor, like in - but not depending on - AeroSnap. It works on Windows XP like this as well.
Observed behavior
0.4.11-RC-36-gc5204e3__ros_isDevestated.webm
-The window does not snap. Instead ros starts logging in endless loop
(../../ntoskrnl/mm/ARM3/procsup.c:409) Thread wants too much stack
|
(../../win32ss/user/ntuser/callback.c:350) err: Error Callback to User space Status c00000fd Message 70
|
(../../ntoskrnl/mm/ARM3/procsup.c:409) Thread wants too much stack
|
(../../win32ss/user/ntuser/callback.c:350) err: Error Callback to User space Status c00000fd Message 71
|
(../../ntoskrnl/mm/ARM3/procsup.c:409) Thread wants too much stack
|
(../../win32ss/user/ntuser/callback.c:350) err: Error Callback to User space Status c00000fd Message 70
|
(../../ntoskrnl/mm/ARM3/procsup.c:409) Thread wants too much stack
|
(../../win32ss/user/ntuser/callback.c:350) err: Error Callback to User space Status c00000fd Message 71
|
(../../ntoskrnl/mm/ARM3/procsup.c:409) Thread wants too much stack
|
(../../win32ss/user/ntuser/callback.c:350) err: Error Callback to User space Status c00000fd Message 36
|
(../../ntoskrnl/mm/ARM3/procsup.c:409) Thread wants too much stack
|
(../../win32ss/user/ntuser/callback.c:350) err: Error Callback to User space Status c00000fd Message 70
|
No way to get out of this.
Taskmgr can be still opened up via ctrl+shift+escape, but impossible to interact (with aim to close the app). Even no ACPI shutdown. Only a hard VM reset gets me out of this.
Attachments
Issue Links
- relates to
-
CORE-16763 Miranda 0.10.21 snap-to-monitor-border-feature does not reduce the desktops size
-
- Open
-
-
CORE-7237 SHAppBarMessage is broken and needs to be rewritten
-
- Resolved
-